--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -18,7 +18,7 @@ main {
   padding-top: 24px;
   background: $black-gradient;
   min-height: 100vh;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 body{
